# vrptw-hybrid-solver

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/: __init__.py  streamlit_app.py
configs/: ablation.yaml  ablation_selectors.yaml  city_demo_berlin_mitte.yaml  default.yaml  experiment_medium.yaml  experiment_small.yaml  repro_check.yaml  solomon_small.yaml
docs/: P2_ABL_01_REPORT.md  P2_CHECKPOINT_01.md  P2_DOC_01_REPORT.md  P2_EXP_02_REPORT.md  P2_INSTALL_AUDIT.md  P2_REL_02_REPORT.md  P2_RUN_01_REPORT.md  P2_RUN_02_AUDIT.md  P2_VIS_00_AUDIT.md  P2_VIS_01A_REPORT.md  P2_VIS_01B_00_AUDIT.md  P2_VIS_01B_REPORT.md  P2_VRPTW_Codex_Workorders.md  adaptive_selector.md  algorithm_alns.md  claim_registry.md  data_sources.md  demo_guide.md  environment.md  experiment_protocol.md  interview_notes.md  modeling.md  release_notes_v0.1.0.md  resume_bullets.md  statistical_tests.md
scripts/: generate_city_demo.py  generate_demo_artifacts.py  generate_medium_assets.py  make_report_figures.py  profile_alns.py  run_scaling.py
tests/: test_alns_acceptance.py  test_alns_context.py  test_alns_destroy.py  test_alns_repair.py  test_alns_solver.py  test_alns_state.py  test_base_solver.py  test_benchmark_instances.py  test_benchmark_plot.py  test_checker.py  test_city_demo.py  test_cli.py  test_cli_plot.py  test_config.py  test_distance_matrix.py  test_exact_cp_sat.py  test_experiment_plots.py  test_experiment_runner.py  test_experiment_statistics.py  test_folium_map.py  test_geojson.py  (+18 more)
(+96 files in other folders)
