[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrptw-hybrid"
version = "0.1.0"
description = "Hybrid VRPTW solver with exact validation, adaptive ALNS, and map visualization."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "VRPTW Project" },
]
dependencies = [
  "matplotlib>=3.8",
  "networkx>=3.2",
  "numpy>=1.26",
  "ortools>=9.9",
  "pandas>=2.0",
  "plotly>=5.18",
  "pyyaml>=6.0",
  "rich>=13.0",
  "scipy>=1.11",
  "typer>=0.12",
]

[project.scripts]
vrptw = "vrptw_hybrid.cli:app"

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
vis = [
  "folium>=0.16",
  "geopandas>=0.14",
  "osmnx>=1.9",
  "streamlit>=1.35",
  "streamlit-folium>=0.20",
]
copt = [
  "coptpy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "RUF", "UP"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
